sample-aws-eks-auto-mode/examples/neuron/vllm-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-service-ingress
  namespace: vllm-inference
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: eks-auto-alb
  rules:
  - http:
      paths:
      - path: /vllm
        pathType: Prefix
        backend:
          service:
            name: vllm-service
            port:
              number: 80
